Feat: Adiciona pagina de listagem de usuarios para admin

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,7 +27,7 @@
                             Gerenciamento
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Usuários</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('admin_users') }}">Usuários</a></li>
                         </ul>
                     </li>
                     {% endif %}
