--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,7 +4,7 @@
 
 {% block body_content %}
     <div class="login-container">
-        <h2>Login de Acesso</h2>
+        <h2>Login</h2>
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
                 {% for category, message in messages %}
