Feat: Implementa a edicao de usuarios para admin

--- a/app/templates/admin_users.html
+++ b/app/templates/admin_users.html
@@ -39,7 +39,7 @@
                     {% endif %}
                 </td>
                 <td>
-                    <a href="#" class="btn btn-sm btn-primary">Editar</a>
+                    <a href="{{ url_for('edit_user', user_id=user.id) }}" class="btn btn-sm btn-primary">Editar</a>
                 </td>
             </tr>
             {% endfor %}
